<resources>
    <string name="app_name">GrandApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- String tittle fragments -->
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="routines">Routines</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <!-- String menú -->
    <string name="mis_rutinas">Mis Rutinas</string>
    <string name="mis_dispositivos">Mis Dispositivos</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <!-- String login -->
    <string name="IDENTIFICARSE"><b>IDENTIFICARSE</b></string>
    <string name="REGISTRARSE"><b>REGISTRARSE</b></string>
    <string name="sinsesion">CONTINUAR <b>SIN INICIAR SESIÓN</b></string>
    <string name="puedes">O PUEDES REGISTRARTE PULSANDO <b>AQUÍ</b></string>
    <string name="GOOGLE"><b>IDENTIFÍCATE CON GOOGLE</b></string>
    <string name="cuenta"><b>CREAR TU CUENTA</b></string>
    <string name="IDENTIFICATE">¿YA TIENES CUENTA? <b>IDENTIFÍCATE</b></string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="passwordrepeat">Repetir contraseña</string>
    <string name="ok">OK</string>
    <string name="vacio">El campo no puede quedar vacío</string>
    <string name="mailerror">Formato de email incorrecto</string>
    <string name="pwd1error">Las contraseñas no coinciden</string>
    <string name="supporting_textlogin"><b>Email y/o contraseña incorrecto</b></string>

    <!-- String Home -->
    <string name="supporting_textRoutineError"><b>Error al obtener las rutinas</b></string>
    <string name="supporting_textDeviceError"><b>Error al obtener los dispositivos</b></string>

    <!-- String Perfil -->
    <string name="guardar_cambios"><b>GUARDAR CAMBIOS</b></string>
    <string name="ayuda"><b>Ayuda</b></string>
    <string name="acuerdo_usuario"><b>Acuerdo de Usuario</b></string>
    <string name="cerrar_sesion"><b>Cerrar Sesión</b></string>

    <!-- String Rutinas -->
    <string name="nombre"><b>Nombre</b></string>
    <string name="descripcion"><b>Descripción</b></string>
    <string name="anadir_dispositivo"><b>Añadir Dispositivo</b></string>
    <string name="add_dias"><b>Añadir día(s)</b></string>
    <string name="add_horas"><b>Añadir hora(s)</b></string>
    <string name="eliminar"><b>Eliminar</b></string>
    <string name="guardar"><b>Guardar</b></string>
    <string name="supporting_textRoutine"><b>¿Está seguro de que desea eliminar la rutina?</b></string>
    <string name="add_rutina"><b>Añadir Rutina</b></string>
    <string name="supporting_textRoutineUpdate"><b>Error al actualizar las rutinas</b></string>

    <!-- String devices -->
    <string name="anadir_dev"><b>Añadir dispositivo</b></string>
    <string name="refrescar"><b>Refrescar</b></string>
    <string name="decline"><b>No</b></string>
    <string name="titlealert"><b>Aviso</b></string>
    <string name="supporting_textDevice"><b>¿Está seguro de que desea eliminar el dispositivo?</b></string>
    <string name="accept"><b>Sí</b></string>
    <string name="supporting_textRoutineFromDevice"><b>¿Está seguro de que desea quitar este dispositivo de la rutina?</b></string>
    <string name="supporting_textDeviceUpdate"><b>Error al actualizar los dispositivos</b></string>

    <!-- String Manager -->
    <string name="error"><b>Error</b></string>
    <string name="supporting_textManager"><b>Error procesando la petición</b></string>
    <string name="supporting_textConnection"><b>Error con la conexión a internet</b></string>

    <string name="cargando"><b>Cargando...</b></string>
    <string name="guardar_dispositivo_dialog_title"><b>Guardar dispositivo</b></string>
    <string name="guardar_dispositivo_dialog_desc"><b>¡Añade un nombre y una descripción!</b></string>

</resources>