<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_weight="18"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="219dp"
            android:layout_height="232dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@mipmap/perfil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="18"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tagNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="Nombre"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:inputType="text"
                android:padding="10dp"
                android:text="Laura Insua"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tagAyuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/ayuda"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tagAcuerdoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/acuerdo_usuario"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tagCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/buttonGuardarCambios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="10dp"
            android:background="@drawable/guardar_cambios_button"
            android:text="@string/guardar_cambios"
            android:textSize="18sp"
            android:textColor="@color/dark_grey"/>

    </LinearLayout>

</LinearLayout>

</RelativeLayout>